--- a/optionalpara.html
+++ b/optionalpara.html
@@ -4,17 +4,17 @@ OPTIONAL PARAMETERS IN FUNCTION
 
 -while calling  the funtion we will make few parameters optional
 
--this concept intreduced in ES6
+-this concept introduced in ES6
 
 -optional parameters we will represent with "?"
 
--optional parameters will work in Typescript
+-optional parameters will work in "Typescript"
 
--"superset" of javascript called as "typescript"
+-"superset" of javascript called as "Typescript"
 
 -we will save "typescript" files with ".ts" extention
 
--typescript follows the "OOPs" 
+-Typescript follows the "OOPs" 
 
 -Typescript is "programming" Language
 
@@ -22,7 +22,22 @@ OPTIONAL PARAMETERS IN FUNCTION
 
 -So we need to convert typescript to equvalent javascript
 
--conversion from typescript to javascript called as "Transpilation"
+-conversion from typescript to  Equivalent javascript is called as "Transpilation"
+
+INSTALLATION OF TYPESCRIPT(in node)
+**************************
+>npm install -g typescript
+
+npm stands for node package manager
+-g stands for global installation
+
+TRANSPILATION
+***************
+
+>tsc demo.ts   //demo.ts is typescript
+               //  if compilation success then we get js file
+
+o/p ----> demo.js
 
 
 
