--- a/optionalpara.html
+++ b/optionalpara.html
@@ -2,7 +2,7 @@
 OPTIONAL PARAMETERS IN FUNCTION
 ********************************
 
--while calling  the funtion we will make few parameters optional
+-while calling  the function we will make few parameters optional
 
 -this concept introduced in ES6
 
@@ -12,7 +12,7 @@ OPTIONAL PARAMETERS IN FUNCTION
 
 -"superset" of javascript called as "Typescript"
 
--we will save "typescript" files with ".ts" extention
+-we will save "typescript" files with ".ts" extension
 
 -Typescript follows the "OOPs" 
 
@@ -20,7 +20,7 @@ OPTIONAL PARAMETERS IN FUNCTION
 
 -Browsers wont understand Typescript 
 
--So we need to convert typescript to equvalent javascript
+-So we need to convert typescript to equivalent javascript
 
 -conversion from typescript to  Equivalent javascript is called as "Transpilation"
 
